provide support for multiple websites in 1 environment (so filters by websiteID)

--- a/BuildGCWEB/files/liquid/webtemplates/CS-header.liquid
+++ b/BuildGCWEB/files/liquid/webtemplates/CS-header.liquid
@@ -914,7 +914,7 @@ select[id*="cs_"] {
       <!-- Logo - comes first in DOM -->
       <div class="col-xs-9 col-sm-5 col-md-4" property="publisher" typeof="GovernmentOrganization">
         <a href="/" property="url">
-          <img src="/logo.png" alt="Elections Canada" property="logo">
+          <img src="/logo-bw-contrast.png" alt="Elections Canada" property="logo">
           <span class="wb-inv"> / <span lang="fr">Élections Canada</span></span>
         </a>
         <meta property="name" content="Elections Canada">
