--- a/BuildGCWEB/files/liquid/webtemplates/CS-Layout-1-Column-with-Left-Nav.liquid
+++ b/BuildGCWEB/files/liquid/webtemplates/CS-Layout-1-Column-with-Left-Nav.liquid
@@ -1,34 +1,138 @@
+{% comment %}
+  Stylish Portfolio Theme - 1 Column with Left Nav Layout Template
+  Based on Start Bootstrap Stylish Portfolio v6.0.6
+  Adapted for Power Pages by CloudStrucc
+{% endcomment %}
+
 {% include 'CS-Wizard-Style' %}
 
-<main property="mainContentOfPage">
-<!-- <div class="wrapper-body"> -->
-    <div class="container">
-        <div class="page-heading">
-          {% block breadcrumbs %}
-            {% include 'Breadcrumbs' %}
+<main id="sp-main" class="sp-main-content">
+  <div class="container py-4">
+    
+    <div class="page-heading mb-4">
+      {% block breadcrumbs %}
+        {% include 'Breadcrumbs' %}
+      {% endblock %}
+      
+      {% block title %}
+        {% assign parentPageTitle = page.parent.title %}
+        {% include 'Page Header' title: parentPageTitle %}
+      {% endblock %}
+    </div>
+    
+    <div class="row">
+      <!-- Left Navigation Sidebar -->
+      <div class="col-lg-3 col-md-4 mb-4">
+        <div class="sp-dashboard-card" style="padding: 0;">
+          {% block navigation %}
+            {% comment %} Navigation will be injected by child templates {% endcomment %}
           {% endblock %}
-
-          {% block title %}
-            {% assign parentPageTitle = page.parent.title %}
-            {% include 'Page Header' title: parentPageTitle %}
+        </div>
+      </div>
+      
+      <!-- Main Content Area -->
+      <div class="col-lg-9 col-md-8">
+        <div id="mainContent" class="sp-dashboard-card">
+          {% block main %}
+            {% comment %} Main content will be injected by child templates {% endcomment %}
           {% endblock %}
         </div>
         
-            <div class="col-md-3">
-            {% block navigation %}
-            {% endblock %}
-            </div>
-            <div class="col-md-9">
-            {% block main %}
-              
-            {% endblock %}
-
-            {% block nextPrevious %}
-
-            {% endblock %}
-            </div>
-        
+        {% block nextPrevious %}
+          {% comment %} Pagination will be injected by child templates {% endcomment %}
+        {% endblock %}
+      </div>
     </div>
-          <div class ="push"></div>
-<!-- </div> -->
+    
+  </div>
 </main>
+
+<style>
+/* Left Navigation Styles for Stylish Portfolio */
+.sp-left-nav {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.sp-left-nav-header {
+  background-color: var(--sp-primary);
+  color: var(--sp-white);
+  padding: 15px 20px;
+  font-weight: 600;
+  font-size: 1.1rem;
+}
+
+.sp-left-nav li {
+  border-bottom: 1px solid #eee;
+}
+
+.sp-left-nav li:last-child {
+  border-bottom: none;
+}
+
+.sp-left-nav a {
+  display: block;
+  padding: 12px 20px;
+  color: var(--sp-dark);
+  text-decoration: none;
+  transition: background-color 0.2s ease, color 0.2s ease;
+}
+
+.sp-left-nav a:hover {
+  background-color: var(--sp-light);
+  color: var(--sp-primary);
+}
+
+.sp-left-nav a.active {
+  background-color: var(--sp-primary);
+  color: var(--sp-white);
+}
+
+.sp-left-nav .sp-sub-nav {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  background-color: #f8f9fa;
+}
+
+.sp-left-nav .sp-sub-nav a {
+  padding-left: 35px;
+  font-size: 0.95rem;
+}
+
+/* Section Navigation for WET compatibility */
+nav.wb-sec .list-group {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav.wb-sec h3 {
+  background-color: var(--sp-primary);
+  color: var(--sp-white);
+  padding: 15px 20px;
+  margin: 0;
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+nav.wb-sec .list-group-item {
+  display: block;
+  padding: 12px 20px;
+  color: var(--sp-dark);
+  text-decoration: none;
+  border-bottom: 1px solid #eee;
+  transition: background-color 0.2s ease;
+}
+
+nav.wb-sec .list-group-item:hover {
+  background-color: var(--sp-light);
+  color: var(--sp-primary);
+}
+
+nav.wb-sec .list-group-item.active {
+  background-color: var(--sp-primary);
+  color: var(--sp-white);
+}
+</style>
